add golang friends & posts
